fix : fixed the flickering animaiton

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,16 +7,32 @@ body{
 
 @keyframes flicker {
   0%   { opacity: 1; }
-  2%   { opacity: 0.4; }
-  4%   { opacity: 1; }
-  19%  { opacity: 0.6; }
-  21%  { opacity: 1; }
-  63%  { opacity: 0.7; }
-  64%  { opacity: 1; }
-  70%  { opacity: 0.3; }
+  2%   { opacity: 0.2; }
+  3%   { opacity: 1; }
+  6%   { opacity: 0.5; }
+  7%   { opacity: 1; }
+  9%   { opacity: 0.1; }
+  10%  { opacity: 1; }
+  11%  { opacity: 0.3; }
+  14%  { opacity: 1; }
+  20%  { opacity: 0.6; }
+  25%  { opacity: 1; }
+  30%  { opacity: 0.2; }
+  31%  { opacity: 1; }
+  40%  { opacity: 0.4; }
+  41%  { opacity: 1; }
+  60%  { opacity: 0.3; }
+  61%  { opacity: 1; }
+  65%  { opacity: 0.8; }
+  70%  { opacity: 1; }
+  80%  { opacity: 0.5; }
+  81%  { opacity: 1; }
+  90%  { opacity: 0.2; }
+  91%  { opacity: 1; }
   100% { opacity: 1; }
 }
 
 .flicker {
-  animation: flicker 3s infinite ease-in-out;
+  animation: flicker 4.5s infinite;
 }
+
